# jsoncpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
example/: array.json  bool.json  empty.json  example.json  example_save.json  insert.json  null.json  num.json  rewrite.json  string.json  wrongempty.json
include/: jsoncpp.h  testframe.h
src/: jsoncpp.cpp
